--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^7.0.0",
     "firebase": "^9.0.0",
     "ionicons": "^7.0.0",
+    "ngx-auth": "^6.0.0",
     "rxfire": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
